[package]
name = "dissbson"
version = "1.0.0+rc.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
bson = { version = "2.6.1", features = ["chrono", "serde_with", "uuid-1"] }
chrono = "0.4.24"
clap = { version = "4.1.11", features = ["derive"] }
humansize = "2.1.3"
rayon = "1.7.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
neoncore = "3.0.0"
byteorder = "1.4.3"
postcard = { version = "1.0.4", features = ["alloc", "use-std"] }
flate2 = "1.0.25"
tokio = { version = "1.26.0", features = ["full"] }
indicatif = { version = "0.17.3", features = ["tokio"] }
