[package]
edition = "2021"
name = "dissbson"
version = "2.0.0"
description = "Parse and conver big bson files to json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
opt-level = 3
strip = true

[dependencies]
bson = {version = "2.6.1", features = ["chrono", "serde_with", "uuid-1"]}
clap = {version = "4.1.11", features = ["derive"]}
flate2 = "1.0.25"
humansize = "2.1.3"
indicatif = {version = "0.17.3", features = ["tokio"]}
neoncore = "4.0.0"
parking_lot = { version = "0.12.1", features = ["serde"] }
postcard = {version = "1.0.4", features = ["alloc", "use-std"]}
rayon = "1.7.0"
rlua = "0.19.4"
seahash = {version = "4.1.0", features = ["use_std"]}
serde = {version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
thiserror = "1.0.40"
